install of django-cms in progress - still lacking running app and config security audit

--- a/ARCSystem/Dockerfile
+++ b/ARCSystem/Dockerfile
@@ -8,26 +8,31 @@
 FROM nginx
 #COPY ./share/nginx/html/ /share/nginx/html/
 COPY ./arcsApp/static/ /share/nginx/static/
+COPY ./arcsApp/media/ /share/nginx/media/
 COPY ./nginx.conf .
 #VOLUME /usr/share/nginx/html/
 VOLUME /usr/share/nginx/static/
+VOLUME /usr/share/nginx/media/
 VOLUME /etc/nginx/
 
 # mount the volumes for the django app and run the configuration
 FROM python:3.6
 
 # arbitrary location choice: you can change the directory
-RUN mkdir -p /opt/services/djangoapp/src
-WORKDIR /opt/services/djangoapp/src
-
-# install our two dependencies
-RUN pip install gunicorn django
+RUN mkdir -p /var/www/arcsApp/
+WORKDIR /var/www/arcsApp/
 
 # copy our project code
-COPY . /opt/services/djangoapp/src
+COPY ./arcsApp/ /var/www/arcsApp/
+
+# install our two dependencies
+RUN pip install django==2.2.9 uwsgi==2.0.18 psycopg2 django-cms==3.7.1 # TODO load from requirements.txt
+# RUN pip install gunicorn django
+# RUN pip install -r requirements.txt
 
 # expose the port 8000
-EXPOSE 8000
+# EXPOSE 8000
 
 # define the default command to run when starting the container
-CMD ["gunicorn", "--chdir", "hello", "--bind", ":8000", "hello.wsgi:application"]
+# CMD ["gunicorn", "--chdir", "hello", "--bind", ":8000", "hello.wsgi:application"]
+RUN python3 ./manage.py runserver 0.0.0.0:8000
