--- a/ARCSystem/nginx.conf
+++ b/ARCSystem/nginx.conf
@@ -9,37 +9,68 @@ events {
 
 http {
     # ...
-    upstream django_server {
-        server 127.0.0.1:29000;
+#   error_log /etc/nginx/error_log.log warn;
+
+   upstream django_server {
+         server 127.0.0.1:8000; # TODO figure out how to properly network and route wgsi to the nginx server for handling
+#        server 0.0.0.0:8000;
+#        server 127.0.0.1:8000;
+#        server localhost8000;
+#        server ARCSCore:8000; # using the networking of docker to find the continer and port exposed
         }
 
     server {
         listen 80;
-        server_name myapp.example.com;
-        root /var/www/arcsApp/html;
+#        listen 443 ssl;
+#        ssl_certificate /etc/letsencrypt/live/medborgarforskning/fullchain.pem;
+#        ssl_certificate_key /etc/letsencrypt/live/medborgarforskning/privkey.pem;
+#        include /etc/letsencrypt/options-ssl-nginx.conf;
+        server_name localhost;
+        charset utf-8;
+        root /var/www/arcsApp/;
 
+        location /static/  { # scripts, images, etc for site design - working don't touch
+            alias /var/www/arcsApp/static/;
+        }
+
+        # Reverse proxy the uwsgi Django request
         location / {
-            index index.html;
-        }
-
-        location /static/  { # scripts, images, etc for site design
-            alias /usr/share/nginx/static/;
-        }
-
-        location /media/  { # user generated content
-            alias /usr/share/nginx/media/;
-        }
-
-        location /main {
-            include /etc/nginx/uwsgi_params;
-            uwsgi_pass django_server;
-            uwsgi_param Host $host;
-            uwsgi_param X-Real-IP $remote_addr;
-            uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
-            uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
+          uwsgi_pass django_server;
+          include uwsgi_params;
         }
     }
 }
+
+#### delete below this line ####
+
+#        location /media/  { # user generated content
+#            alias /usr/share/nginx/media/;
+#        }
+
+#        location / {
+#
+#        }
+
+
+#         location / {
+#            include uwsgi_params;
+#            uwsgi_pass django_server;
+#            uwsgi_pass 0.0.0.0:8000;
+#            uwsgi_param Host $host;
+#            uwsgi_param X-Real-IP $remote_addr;
+#            uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
+#            uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
+#        }
+
+#        location / { # first try
+#            include /etc/nginx/uwsgi_params;
+#            uwsgi_pass django_server;
+#            uwsgi_param Host $host;
+#            uwsgi_param X-Real-IP $remote_addr;
+#            uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
+#            uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
+#        }
+
 
 
 # the following builds, but gives error 500
