--- a/ARCSystem/requirements.txt
+++ b/ARCSystem/requirements.txt
@@ -14,6 +14,8 @@ uwsgi ==2.0.18
 psycopg2==2.7
 django-cms ==3.7.1
 djangocms-installer
+#uwsgi-plugin-python
+#uwsgi-emperor
 
 ### from django-cms requirements.txt
 # django-cms>=3.7,<3.8
