--- a/ARCSystem/nginx.conf
+++ b/ARCSystem/nginx.conf
@@ -9,118 +9,41 @@ events {
 
 http {
     # ...
-#   error_log /etc/nginx/error_log.log warn;
 
    upstream django_server {
-         server 127.0.0.1:8000; # TODO figure out how to properly network and route wgsi to the nginx server for handling
-#        server 0.0.0.0:8000;
-#        server 127.0.0.1:8000;
-#        server localhost8000;
-#        server ARCSCore:8000; # using the networking of docker to find the continer and port exposed
+     server 127.0.0.1:8000; # TODO figure out how to properly network and route wgsi to the nginx server for handling
+
         }
 
     server {
-        listen 80;
+        listen 80 default_server;
 #        listen 443 ssl;
 #        ssl_certificate /etc/letsencrypt/live/medborgarforskning/fullchain.pem;
 #        ssl_certificate_key /etc/letsencrypt/live/medborgarforskning/privkey.pem;
 #        include /etc/letsencrypt/options-ssl-nginx.conf;
         server_name localhost;
         charset utf-8;
-        root /var/www/arcsApp/;
+#        root /var/www/arcsApp/;
+
+        # max upload size
+        client_max_body_size 75M;   # adjust to taste
 
         location /static/  { # scripts, images, etc for site design - working don't touch
             alias /var/www/arcsApp/static/;
         }
 
+        location /media/  { # host static files from user side
+            alias /var/www/arcsApp/media/;
+        }
+
         # Reverse proxy the uwsgi Django request
         location / {
+          include /etc/nginx/uwsgi_params;
           uwsgi_pass django_server;
-          include uwsgi_params;
         }
+
+#        error_log /etc/nginx/error_log.log;
+#        access_log /etc/nginx/access_log.log;
+
     }
 }
-
-#### delete below this line ####
-
-#        location /media/  { # user generated content
-#            alias /usr/share/nginx/media/;
-#        }
-
-#        location / {
-#
-#        }
-
-
-#         location / {
-#            include uwsgi_params;
-#            uwsgi_pass django_server;
-#            uwsgi_pass 0.0.0.0:8000;
-#            uwsgi_param Host $host;
-#            uwsgi_param X-Real-IP $remote_addr;
-#            uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
-#            uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
-#        }
-
-#        location / { # first try
-#            include /etc/nginx/uwsgi_params;
-#            uwsgi_pass django_server;
-#            uwsgi_param Host $host;
-#            uwsgi_param X-Real-IP $remote_addr;
-#            uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
-#            uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
-#        }
-
-
-
-# the following builds, but gives error 500
-#events {
-#  worker_connections  4096;  ## Default: 1024
-#}
-#http {
-#  error_log /etc/nginx/error_log.log warn;
-# server {
-#   listen 80;
-#   listen [::]:80;
-
-#   server_name 127.0.0.1;
-#   charset utf-8;
-
-#   location / {
-#       alias /ARCSystem/arcsApp/static:
-#       proxy_pass http://127.0.0.2:80/;
-#       proxy_set_header Host $host;
-#   }
-# }
-#}
-
-# the following does not build
-# events {
-
-# }
-
-#http {
-#  error_log /etc/nginx/error_log.log warn;
-#  client_max_body_size 20m;
-#  proxy_cache_path /etc/nginx/cache keys_zone=one:500m max_size=1000m;
-
-#  server {
-#    server_name localhost:8080;
-#    proxy_cache one;
-#    proxy_cache_key $request_method$request_uri;
-#    proxy_cache_min_uses 1;
-#    proxy_cache_methods GET;
-#    proxy_cache_valid 200 1y;
-
-#    location /ARCSystem/arcsApp/ {
-#      proxy_pass localhost:80;
-#      rewrite ^/medborarforskning(.*)$ $1 break;
-#    }
-
-#    listen 80;
-#    listen 443 ssl;
-#    ssl_certificate /etc/letsencrypt/live/medborgarforskning/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/medborgarforskning/privkey.pem;
-#    include /etc/letsencrypt/options-ssl-nginx.conf;
-#  }
-#}
