--- a/ARCSystem/requirements.txt
+++ b/ARCSystem/requirements.txt
@@ -11,7 +11,7 @@
 ### ArcsCore
 Django~=2.2.9
 uwsgi ==2.0.18
-psycopg2==2.7
+#psycopg2==2.7
 django-cms ==3.7.1
 djangocms-installer
 #uwsgi-plugin-python
