--- a/ARCSystem/nginx/Dockerfile
+++ b/ARCSystem/nginx/Dockerfile
@@ -11,9 +11,8 @@ RUN apt-get clean && apt-get update && apt-get install \
   -y --no-install-recommends
 
 COPY arcsApp /share/nginx/static/
-#COPY arcsApp /share/nginx/media/
-COPY ./nginx.conf .
-#COPY ./uwsgi_params /etc/nginx/
+COPY arcsApp /share/nginx/media/
+COPY nginx.conf .
 VOLUME /usr/share/nginx/static/
-#VOLUME /usr/share/nginx/media/
-VOLUME /etc/nginx/
+VOLUME /usr/share/nginx/media/
+VOLUMEOLUME /etc/nginx/
