resolve django spinup - hello world

--- a/ArcsSystem/nginx.conf
+++ b/ArcsSystem/nginx.conf
@@ -17,17 +17,17 @@ http {
     listen 80 default_server;
     server_name localhost;
     charset utf-8;
-    #        root /var/www/arcsApp/;
+    #        root /var/www/arcs_project_code/;
 
     # max upload size
     client_max_body_size 75M;   # adjust to taste
 
     location /static/ { # scripts, images, etc for site design - working don't touch
-      alias /var/www/arcsApp/static/;
+      alias /var/www/arcs_project_code/static/;
     }
 
     location /media/ { # host static files from user side
-      alias /var/www/arcsApp/media/;
+      alias /var/www/arcs_project_code/media/;
     }
 
     # Reverse proxy the uwsgi Django request
