--- a/ArcsSystem/nginx/Dockerfile
+++ b/ArcsSystem/nginx/Dockerfile
@@ -10,9 +10,9 @@ FROM nginx
 RUN apt-get clean && apt-get update && apt-get install \
   -y --no-install-recommends
 
-COPY arcsApp /share/nginx/static/
-COPY arcsApp /share/nginx/media/
+#COPY arcs_project /share/nginx/static/
+#COPY arcs_project /share/nginx/media/
 COPY nginx.conf .
-VOLUME /usr/share/nginx/static/
-VOLUME /usr/share/nginx/media/
-VOLUMEOLUME /etc/nginx/
+#VOLUME /usr/share/nginx/static/
+#VOLUME /usr/share/nginx/media/
+VOLUME /etc/nginx/
