--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
   djangoapp:
     container_name: ARCSCore
     restart: always
-    build: .
+    build: ./ArcsSystem
     depends_on:
       db:
         condition: service_healthy
@@ -55,6 +55,7 @@ services:
     image: nginx:latest
     container_name: ARCServer
     restart: always
+    build: ./nginx
     depends_on:
       djangoapp:
         condition: service_healthy
@@ -62,8 +63,8 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf #copy local nginx.conf file from /opt directory relative to execution
-      - ./arcs_project/static/:/var/www/arcs_project/static
+#      - nginx.conf:/etc/nginx/nginx.conf #copy local nginx.conf file from /opt directory relative to execution
+      - ./ArcsSystem/arcs_project/static/:/var/www/arcs_project/static
 #      - ./uwsgi_params:/var/
     networks:
       - nginx_network
