--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
     listen 80 default_server;
     server_name localhost;
     charset utf-8;
-    #        root /var/www/arcs_project_code/;
+    root /var/www/arcs_project_code/;
 
     # max upload size
     client_max_body_size 75M;   # adjust to taste
