--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.idea/
 MANIFEST
 
 # PyInstaller
@@ -128,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Pycharm generated
+.idea/
+
+# ARCS Generated Files we don't want synced
+postgresdb/
