--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -7,7 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "==2.2.10"
-gunicorn = "*"
+psycopg2 = "==2.7"
+gunicorn = "==20.0.4"
+uwsgi = "==2.0.18"
 
 [requires]
 python_version = "3.7"
