--- a/nginx/remove/arcsApp_wsgi.ini
+++ b/nginx/remove/arcsApp_wsgi.ini
@@ -1,11 +1,11 @@
 # arcs_project_uwsgi.ini file
-[uwsgi]
+[server:main]
 
 # Django-related settings
 # the base directory (full path)
 chdir           = /path/to/your/project
 # Django's wsgi file
-module          = project.wsgi
+module          = arcs_project.wsgi
 # the virtualenv (full path)
 home            = /path/to/virtualenv
 
