--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,13 +7,9 @@
 # Builds the ARCServer container and mount the volumes for the nginx server
 FROM nginx
 
-#update packages
-RUN apt-get clean && apt-get update && apt-get install \
-  -y --no-install-recommends
-
 #COPY arcs_project /share/nginx/static/
 #COPY arcs_project /share/nginx/media/
-COPY nginx.conf .
+COPY nginx.conf /etc/nginx/
 #VOLUME /usr/share/nginx/static/
 #VOLUME /usr/share/nginx/media/
-VOLUME /etc/nginx/
+#VOLUME /etc/nginx/
