--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,9 +7,15 @@
 # Builds the ARCServer container and mount the volumes for the nginx server
 FROM nginx
 
-#COPY arcs_project /share/nginx/static/
-#COPY arcs_project /share/nginx/media/
+### remove the default config files
+RUN rm /etc/nginx/nginx.conf
+RUN rm /etc/nginx/mime.types
+
+### copy the nginx.conf file from ARCS to docker image
 COPY nginx.conf /etc/nginx/
-#VOLUME /usr/share/nginx/static/
-#VOLUME /usr/share/nginx/media/
-#VOLUME /etc/nginx/
+
+### copy the mime.types file from ARCS to docker image
+COPY conf/mime.types /etc/nginx/
+
+
+# shared volume for static files are configured in docker-compose.yaml
