--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,15 +7,15 @@
 # Builds the ARCServer container and mount the volumes for the nginx server
 FROM nginx
 
-### remove the default config files
+### remove the default config files copy the ARCS default nginx.conf
 RUN rm /etc/nginx/nginx.conf
-RUN rm /etc/nginx/mime.types
 
-### copy the nginx.conf file from ARCS to docker image
+###
 COPY nginx.conf /etc/nginx/
 
-### copy the mime.types file from ARCS to docker image
-COPY conf/mime.types /etc/nginx/
+### copy a custom mime.types file from ARCS to docker image
+#RUN rm /etc/nginx/mime.types
+#COPY conf/mime.types /etc/nginx/
 
 
 # shared volume for static files are configured in docker-compose.yaml
